--- a/app/ui/main_window.ui
+++ b/app/ui/main_window.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>992</width>
+    <height>630</height>
+   </rect>
+  </property>
   <property name="windowTitle">
    <string>SalaryReader</string>
   </property>
@@ -16,7 +24,7 @@ background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:0, y2:0, stop:0 rgb
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <widget class="QComboBox" name="comboBox">
+     <widget class="QComboBox" name="department">
       <property name="styleSheet">
        <string notr="true">QComboBox { 
 background-color: rgba(255, 255, 255, 30);
@@ -102,19 +110,44 @@ border: none;</string>
               </widget>
              </item>
              <item>
-              <widget class="QListWidget" name="roles_table">
+              <widget class="QListWidget" name="roles_list">
+               <property name="contextMenuPolicy">
+                <enum>Qt::ContextMenuPolicy::DefaultContextMenu</enum>
+               </property>
                <property name="styleSheet">
                 <string notr="true">background-color: rgba(255, 255, 255, 0)</string>
                </property>
+               <property name="defaultDropAction">
+                <enum>Qt::DropAction::MoveAction</enum>
+               </property>
+               <property name="movement">
+                <enum>QListView::Movement::Free</enum>
+               </property>
+               <property name="currentRow">
+                <number>-1</number>
+               </property>
+               <property name="sortingEnabled">
+                <bool>false</bool>
+               </property>
+               <item>
+                <property name="text">
+                 <string>Новый элемент</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Новый элемент</string>
+                </property>
+               </item>
               </widget>
              </item>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_2">
                <item>
-                <widget class="QLineEdit" name="lineEdit"/>
+                <widget class="QLineEdit" name="roles_add_line"/>
                </item>
                <item>
-                <widget class="QPushButton" name="roles_add">
+                <widget class="QPushButton" name="roles_add_button">
                  <property name="styleSheet">
                   <string notr="true">QPushButton:hover {
 background-color: rgba(255, 255, 255, 40)
@@ -191,7 +224,7 @@ border-radius: 7px;</string>
               <number>9</number>
              </property>
              <item>
-              <widget class="QLabel" name="settings_label">
+              <widget class="QLabel" name="label_motivate_settings">
                <property name="styleSheet">
                 <string notr="true">color: white;
 font-weight: bold;
@@ -205,22 +238,60 @@ border: none;</string>
               </widget>
              </item>
              <item>
-              <widget class="QTableWidget" name="settings_table">
+              <widget class="QTableWidget" name="table_motivate_settings">
+               <property name="font">
+                <font>
+                 <italic>false</italic>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="layoutDirection">
+                <enum>Qt::LayoutDirection::LeftToRight</enum>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
                <property name="styleSheet">
-                <string notr="true">color: white;</string>
+                <string notr="true">QTableWidget {
+        gridline-color: gray;  /* Установка цвета линий */
+    }
+    QHeaderView::section {
+        padding: 3px;  /* Убедитесь, что нет лишнего отступа */
+    }</string>
+               </property>
+               <property name="frameShape">
+                <enum>QFrame::Shape::StyledPanel</enum>
+               </property>
+               <property name="sortingEnabled">
+                <bool>true</bool>
                </property>
                <attribute name="horizontalHeaderCascadingSectionResizes">
                 <bool>true</bool>
                </attribute>
                <attribute name="horizontalHeaderMinimumSectionSize">
-                <number>150</number>
+                <number>170</number>
                </attribute>
                <attribute name="horizontalHeaderDefaultSectionSize">
                 <number>170</number>
                </attribute>
+               <attribute name="horizontalHeaderHighlightSections">
+                <bool>true</bool>
+               </attribute>
+               <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+                <bool>true</bool>
+               </attribute>
+               <attribute name="horizontalHeaderStretchLastSection">
+                <bool>true</bool>
+               </attribute>
+               <attribute name="verticalHeaderVisible">
+                <bool>false</bool>
+               </attribute>
                <attribute name="verticalHeaderCascadingSectionResizes">
                 <bool>false</bool>
                </attribute>
+               <row/>
+               <row/>
+               <row/>
                <column>
                 <property name="text">
                  <string>Выручка в руб.</string>
@@ -242,10 +313,85 @@ border: none;</string>
                  <set>AlignLeading|AlignVCenter</set>
                 </property>
                </column>
+               <item row="0" column="0">
+                <property name="text">
+                 <string>323123</string>
+                </property>
+               </item>
+               <item row="0" column="1">
+                <property name="text">
+                 <string>123</string>
+                </property>
+               </item>
+               <item row="1" column="0">
+                <property name="text">
+                 <string>1231</string>
+                </property>
+               </item>
+               <item row="1" column="1">
+                <property name="text">
+                 <string>123</string>
+                </property>
+               </item>
+               <item row="2" column="0">
+                <property name="text">
+                 <string>13321</string>
+                </property>
+               </item>
+               <item row="2" column="1">
+                <property name="text">
+                 <string>213</string>
+                </property>
+               </item>
               </widget>
              </item>
              <item>
-              <layout class="QHBoxLayout" name="SettingsButtons">
+              <layout class="QHBoxLayout" name="SettingsButtons" stretch="3,3,20,10,10">
+               <item>
+                <widget class="QPushButton" name="button_add_threshhold">
+                 <property name="styleSheet">
+                  <string notr="true">QPushButton:hover {
+background-color: rgba(255, 255, 255, 40)
+}
+
+QPushButton:pressed {
+background-color: rgba(255, 255, 255, 70)
+}</string>
+                 </property>
+                 <property name="text">
+                  <string>+</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="button_delete_threshold">
+                 <property name="styleSheet">
+                  <string notr="true">QPushButton:hover {
+background-color: rgba(255, 255, 255, 40)
+}
+
+QPushButton:pressed {
+background-color: rgba(255, 255, 255, 70)
+}</string>
+                 </property>
+                 <property name="text">
+                  <string>-</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <spacer name="horizontalSpacer">
+                 <property name="orientation">
+                  <enum>Qt::Orientation::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
                <item>
                 <widget class="QPushButton" name="settings_save">
                  <property name="styleSheet">
@@ -413,6 +559,12 @@ border: none;</string>
            </widget>
           </item>
          </layout>
+         <zorder>date_from</zorder>
+         <zorder>label_2</zorder>
+         <zorder>date_to</zorder>
+         <zorder>refresh_salary</zorder>
+         <zorder>pushButton_3</zorder>
+         <zorder>get_full_salary_blanc</zorder>
          <zorder>label</zorder>
         </widget>
        </item>
