fix: roles add, update, delete by department_code thresholds edit by roles_id(MotivationProgram_id)
hide column with role name header

set table border color to white(255, 255, 255, 70) in designer

models.py: add uniq key pair

helpers.py: add set_departments, get_department_code

control_models.py: refactor
get_current_roles to
 get_current_roles_by_department_code

--- a/app/ui/main_window.ui
+++ b/app/ui/main_window.ui
@@ -243,10 +243,10 @@ border: none;</string>
                </property>
                <property name="styleSheet">
                 <string notr="true">QTableWidget {
-        gridline-color: gray;  /* Установка цвета линий */
+        gridline-color: rgba(255, 255, 255, 70);
     }
     QHeaderView::section {
-        padding: 3px;  /* Убедитесь, что нет лишнего отступа */
+        padding: 3px;  
     }</string>
                </property>
                <property name="frameShape">
