fetch: add window edit_employees to application (with drag and drop)
main.py: add fill_employees_table and open_edit_employees_window

table_controller.py: add EmployeesTableController

control_models.py: add get_employees_by_motivation_program_id

iiko_api/employees.py: add get_role_by_id, get_employees_by_department

add iiko_business/employees.py

--- a/app/ui/edit_employes_in_role_dialog.ui
+++ b/app/ui/edit_employes_in_role_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>698</width>
+    <width>983</width>
     <height>594</height>
    </rect>
   </property>
@@ -51,14 +51,45 @@ border: none;</string>
          </widget>
         </item>
         <item>
-         <widget class="QTableWidget" name="table_all_employees"/>
+         <widget class="QTableWidget" name="table_all_employees">
+          <property name="editTriggers">
+           <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
+          </property>
+          <property name="dragEnabled">
+           <bool>true</bool>
+          </property>
+          <property name="dragDropOverwriteMode">
+           <bool>false</bool>
+          </property>
+          <property name="dragDropMode">
+           <enum>QAbstractItemView::DragDropMode::DragDrop</enum>
+          </property>
+          <property name="defaultDropAction">
+           <enum>Qt::DropAction::MoveAction</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+          </property>
+          <property name="sortingEnabled">
+           <bool>true</bool>
+          </property>
+          <attribute name="verticalHeaderVisible">
+           <bool>false</bool>
+          </attribute>
+         </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="add_delete_employees_buttons">
         <item>
-         <widget class="QPushButton" name="button_ad_in_role">
+         <widget class="QPushButton" name="button_add_to_role">
+          <property name="maximumSize">
+           <size>
+            <width>80</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="styleSheet">
            <string notr="true">QPushButton:hover {
 background-color: rgba(255, 255, 255, 40)
@@ -71,10 +102,19 @@ background-color: rgba(255, 255, 255, 70)
           <property name="text">
            <string>Добавить-&gt;</string>
           </property>
+          <property name="flat">
+           <bool>false</bool>
+          </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="button_delete_from_role">
+          <property name="maximumSize">
+           <size>
+            <width>80</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="styleSheet">
            <string notr="true">QPushButton:hover {
 background-color: rgba(255, 255, 255, 40)
@@ -108,7 +148,29 @@ border: none;</string>
          </widget>
         </item>
         <item>
-         <widget class="QTableWidget" name="table_role_employes"/>
+         <widget class="QTableWidget" name="table_role_employes">
+          <property name="editTriggers">
+           <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
+          </property>
+          <property name="dragEnabled">
+           <bool>true</bool>
+          </property>
+          <property name="dragDropOverwriteMode">
+           <bool>false</bool>
+          </property>
+          <property name="dragDropMode">
+           <enum>QAbstractItemView::DragDropMode::DragDrop</enum>
+          </property>
+          <property name="defaultDropAction">
+           <enum>Qt::DropAction::MoveAction</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
+          </property>
+          <attribute name="verticalHeaderVisible">
+           <bool>false</bool>
+          </attribute>
+         </widget>
         </item>
        </layout>
       </item>
