--- a/src/salary_reader/ui/main_window.ui
+++ b/src/salary_reader/ui/main_window.ui
@@ -641,20 +641,76 @@ color: white;</string>
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="version_label">
-         <property name="styleSheet">
-          <string notr="true">color: rgba(255, 255, 255, 120);
+        <layout class="QHBoxLayout" name="bottom_layout">
+         <item>
+          <spacer name="horizontalSpacer_bottom">
+           <property name="orientation">
+            <enum>Qt::Orientation::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="check_updates_button">
+           <property name="minimumSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+background-color: rgba(255, 255, 255, 20);
+border: 1px solid rgba(255, 255, 255, 40);
+border-radius: 15px;
+color: white;
+font-size: 12pt;
+}
+
+QPushButton:hover {
+background-color: rgba(255, 255, 255, 40);
+}
+
+QPushButton:pressed {
+background-color: rgba(255, 255, 255, 70);
+}</string>
+           </property>
+           <property name="toolTip">
+            <string>Проверить обновления</string>
+           </property>
+           <property name="text">
+            <string>⟲</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="version_label">
+           <property name="styleSheet">
+            <string notr="true">color: rgba(255, 255, 255, 120);
 font-size: 8pt;
 background-color: none;
 border: none;</string>
-         </property>
-         <property name="text">
-          <string>v2.2.0</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignBottom</set>
-         </property>
-        </widget>
+           </property>
+           <property name="text">
+            <string>v2.2.0</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignBottom</set>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
